로그인횟수제한

--- a/public/index.html
+++ b/public/index.html
@@ -409,11 +409,12 @@
   }
 
   /* 공지 클릭 시 파란색 강조 */
-#notice-list li a.active {
-  color: #0b57d0;
-  font-weight: 600;
-  text-decoration: underline;
-}
+  /* 클릭된 아래쪽 목록 제목 색상 */
+  .notice-item.active a {
+    color: #0b57d0;
+    font-weight: 600;
+    text-decoration: underline;
+  }
 
 /* 접힌 상태 (완전 숨김) */
 #profile-edit-panel{
