로그인횟수제한

--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -408,6 +408,14 @@
     overflow:hidden; text-overflow:ellipsis; white-space:nowrap;
   }
 
+  /* 공지 클릭 시 파란색 강조 */
+  /* 클릭된 아래쪽 목록 제목 색상 */
+  .notice-item.active a {
+    color: #0b57d0;
+    font-weight: 600;
+    text-decoration: underline;
+  }
+
 /* 접힌 상태 (완전 숨김) */
 #profile-edit-panel{
   max-height: 0;
@@ -915,13 +923,31 @@
   }
 
   // 팝업으로 공지 상세 열기
-  function openNotice(id) {
+function openNotice(id) {
+  // 모든 항목의 active 제거
+  document.querySelectorAll('#notice-list li a').forEach(a => a.classList.remove('active'));
+
+  // 클릭된 항목에 active 추가
+  const clicked = document.querySelector(`#notice-list li a[onclick="openNotice(${id})"]`);
+  if (clicked) {
+    clicked.classList.add('active');
+    // 💡 DOM이 실제로 그려질 시간을 확보 (팝업을 바로 열면 브라우저가 렌더 생략함)
+    requestAnimationFrame(() => {
+      window.open(
+        `/notice.html?id=${id}`,
+        'noticePopup',
+        'width=600,height=400,resizable=yes,scrollbars=yes'
+      );
+    });
+  } else {
     window.open(
       `/notice.html?id=${id}`,
       'noticePopup',
       'width=600,height=400,resizable=yes,scrollbars=yes'
     );
   }
+}
+
 
   // 공지 추가 (제목+내용)
   document.getElementById('add-btn')?.addEventListener('click', async () => {
@@ -1017,6 +1043,9 @@
 
     renderNotices();
   }
+
+
+
 
   // 로그인 UI 업데이트 (role 저장/삭제 및 버튼 상태 반영)
   async function updateAuthUI(session) {
