--- a/pay/google.html
+++ b/pay/google.html
@@ -10,27 +10,54 @@
   <button id="payBtn">결제하기</button>
 
   <script>
-    // 아임포트 객체 초기화
+    // ✅ 1. 아임포트 객체 초기화
     const IMP = window.IMP;
-    IMP.init("impXXXXXXXXX"); // 👉 여기엔 본인 아임포트 가맹점 식별코드 입력
+    IMP.init("impXXXXXXXXX"); // 👉 본인 아임포트 가맹점 식별코드 입력
 
+    // ✅ 2. 결제 버튼 클릭 시 실행
     document.getElementById("payBtn").addEventListener("click", function() {
       IMP.request_pay({
-        pg: "html5_inicis",   // 테스트용: 이니시스 PG
-        pay_method: "card",   // 결제 수단: card, kakaopay 등
+        pg: "html5_inicis",    // 테스트용 PG: 이니시스 (웹 카드결제)
+        pay_method: "card",    // 결제 수단
         merchant_uid: "order_" + new Date().getTime(), // 주문 고유번호
         name: "Google 정기구독 (월간)",
-        amount: 9900,         // 결제 금액
+        amount: 9900,          // 결제 금액
         buyer_email: "user@example.com",
         buyer_name: "홍길동",
         buyer_tel: "01012345678",
         buyer_addr: "서울특별시 강남구",
         buyer_postcode: "123-456"
-      }, function (rsp) {
+      }, async function (rsp) {
+        // ✅ 3. 결제 성공 시
         if (rsp.success) {
           alert("결제 성공 🎉\n고유 ID: " + rsp.imp_uid);
-          // ✅ 결제 성공 후 서버에 결제내역 저장 요청
-          // fetch('/api/payment/success', { method:'POST', body: JSON.stringify(rsp) })
+
+          try {
+            // ✅ 4. 서버에 빌링 등록 요청 (fetch)
+            const res = await fetch("/api/payment/register-billing", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({
+                imp_uid: rsp.imp_uid,            // 결제 고유번호
+                customer_uid: rsp.customer_uid || "cust_" + new Date().getTime() // 고객 식별자
+              }),
+            });
+
+            const data = await res.json();
+
+            if (res.ok) {
+              console.log("✅ 서버 응답:", data);
+              alert("서버에 빌링 등록 완료 ✅");
+            } else {
+              console.error("❌ 서버 오류:", data);
+              alert("빌링 등록 실패 ❌: " + (data.error || "서버 오류"));
+            }
+
+          } catch (err) {
+            console.error("[register-billing fetch error]", err);
+            alert("서버 전송 실패 ❌: " + err.message);
+          }
+
         } else {
           alert("결제 실패 ❌\n" + rsp.error_msg);
         }
@@ -39,3 +66,4 @@
   </script>
 </body>
 </html>
+
