로그인횟수제한

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
   console.log("[INDEX] supabaseClient ready:", !!window.supabaseClient);
 </script>
 
+  <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
 
 <style>
   body {
