정기결제연동

--- a/public/index.html
+++ b/public/index.html
@@ -677,14 +677,7 @@
 
 </div>
 
-<!-- 결제 모달 -->
-<div id="subscriptionModal" style="display:none; margin-top:20px; border:1px solid #ccc; padding:16px;">
-  <h3>정기구독 결제</h3>
-  <p>전화번호 인증이 완료되었습니다. 결제 방법을 선택하세요.</p>
-  <button onclick="startGoogleSubscription()">Google 정기구독 결제</button>
-  <button onclick="startKakaoSubscription()">Kakao 정기구독 결제</button>
-</div>
-
+<div id="subscriptionModal" style="display:none; margin-top:20px; border:1px solid #ccc; padding:16px;"></div>
 
 
 
