정기결제연동

--- a/public/business-info.html
+++ b/public/business-info.html
@@ -30,7 +30,7 @@
 <body>
   <h1>사업자정보확인</h1>
   <div class="info-box">
-    <p><strong>상호</strong> 강남효약국(트리만세력)</p>
+    <p><strong>상호</strong> 강남효약국</p>
     <p><strong>대표자명</strong> [유섬근]</p>
     <p><strong>사업자등록번호</strong> [122-13-39843]</p>
     <p><strong>통신판매업신고번호</strong> []</p>
