--- a/public/business-info.html
+++ b/public/business-info.html
@@ -41,5 +41,16 @@
       <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=[1221339843]" target="_blank">공정거래위원회 사업자정보 확인하기</a>
     </p>
   </div>
+
+  <div style="margin-top:30px; text-align:center; font-size:13px; color:#555; line-height:1.6;">
+  <a href="https://treesaju.vercel.app/" style="text-decoration:none; color:#333;">🏠 홈으로 가기</a>
+  <br>
+  <span style="display:inline-block; margin-top:6px;">
+    <a href="/terms.html" style="color:#333; text-decoration:none; margin:0 4px;">이용약관</a> |
+    <a href="/privacy.html" style="color:#333; text-decoration:none; margin:0 4px;">개인정보취급방침</a> |
+    <a href="/business-info.html" style="color:#333; text-decoration:none; margin:0 4px;">사업자정보확인</a>
+  </span>
+</div>
+
 </body>
 </html>
