--- a/public/terms.html
+++ b/public/terms.html
@@ -99,5 +99,16 @@
 
   <hr>
   <p>본 약관은 2025년 10월 1일부터 시행합니다.</p>
+
+  <div style="margin-top:30px; text-align:center; font-size:13px; color:#555; line-height:1.6;">
+  <a href="https://treesaju.vercel.app/" style="text-decoration:none; color:#333;">🏠 홈으로 가기</a>
+  <br>
+  <span style="display:inline-block; margin-top:6px;">
+    <a href="/terms.html" style="color:#333; text-decoration:none; margin:0 4px;">이용약관</a> |
+    <a href="/privacy.html" style="color:#333; text-decoration:none; margin:0 4px;">개인정보취급방침</a> |
+    <a href="/business-info.html" style="color:#333; text-decoration:none; margin:0 4px;">사업자정보확인</a>
+  </span>
+</div>
+
 </body>
 </html>
