정기결제연동

--- a/public/index.html
+++ b/public/index.html
@@ -550,7 +550,17 @@
 <div class="notice-inline">
   <strong>📌 공지사항:&nbsp;</strong>
   <div class="notice-title">
-    <ul id="notice-list"></ul> <!-- 기존 스크립트가 여기 채움 (최신 1개) -->
+<ul id="notice-list" style="
+  background-color: #e9f7ec; 
+  border-radius: 4px; 
+  padding: 8px 12px; 
+  list-style: none; 
+  margin: 8px 0;
+  border: 1px solid #d7ebdc;
+">
+  <!-- 기존 스크립트가 여기 채움 (최신 1개) -->
+</ul>
+
   </div> <button id="add-btn" style="display:none;">공지 추가</button>
 </div>
 <!-- 로그인/로그아웃 영역 -->
@@ -642,7 +652,7 @@
 
   <br>
   <button id="toggle-history-btn" style="background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">고객data</button>
-  <button id="subscribeBtn" type="button" style="margin-left:8px;background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">정기구독</button>
+  <button id="subscribeBtn" type="button" style="margin-left:8px;background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">정기구독 및 결제</button>
 
 
 <!-- 패널 (처음엔 숨김) -->
