--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -46,6 +46,7 @@
   console.log("[INDEX] supabaseClient ready:", !!window.supabaseClient);
 </script>
 
+  <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
 
 <style>
   body {
@@ -641,7 +642,7 @@
 
   <br>
   <button id="toggle-history-btn" style="background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">고객data</button>
-  <button id="subscribeBtn" type="button" style="margin-left:8px;background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">정기구독</button>
+  <button id="subscribeBtn" type="button" style="margin-left:8px;background-color:#4CAF50; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer;">정기구독 및 결제</button>
 
 
 <!-- 패널 (처음엔 숨김) -->
@@ -676,14 +677,7 @@
 
 </div>
 
-<!-- 결제 모달 -->
-<div id="subscriptionModal" style="display:none; margin-top:20px; border:1px solid #ccc; padding:16px;">
-  <h3>정기구독 결제</h3>
-  <p>전화번호 인증이 완료되었습니다. 결제 방법을 선택하세요.</p>
-  <button onclick="startGoogleSubscription()">Google 정기구독 결제</button>
-  <button onclick="startKakaoSubscription()">Kakao 정기구독 결제</button>
-</div>
-
+<div id="subscriptionModal" style="display:none; margin-top:20px; border:1px solid #ccc; padding:16px;"></div>
 
 
 
@@ -812,7 +806,16 @@
 
 
 <div class="note-box">
-  ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 <br>산출되지 않을 수도 있으니 따로 확인해 주세요! <br>한국썸머타임은 적용된 상태입니다. 
+  ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다.
+  <br>
+  <span class="note-links">
+    <a href="/terms.html">이용약관</a> |
+    <a href="/privacy.html">개인정보취급방침</a> |
+    <a href="/business-info.html">사업자정보확인</a>
+  </span>
+</div>
+
+
 </div>
 <div id="result" style="display:none;">
 
