정기결제연동

--- a/public/member-admin.html
+++ b/public/member-admin.html
@@ -68,19 +68,25 @@
 
       <label>등급 (grade):
         <select id="edit-grade">
-          <option value="basic">일반</option>
-          <option value="premium">정기회원</option>
-          <option value="special">특별회원</option>
-          <option value="admin">관리자</option>
+          <option value="basic">basic</option>
+          <option value="premium3">premium3</option>
+          <option value="premium6">premium6</option>
+          <option value="premium">premium</option>
+          <option value="premium_plus">premium_plus</option>
+          <option value="special">special</option>
+          <option value="admin">admin</option>
         </select>
       </label><br>
 
       <label>권한 (role):
         <select id="edit-role">
-          <option value="normal">일반</option>
-          <option value="premium">정기회원</option>
-          <option value="special">특별회원</option>
-          <option value="admin">관리자</option>
+          <option value="basic">basic</option>
+          <option value="premium3">premium3</option>
+          <option value="premium6">premium6</option>
+          <option value="premium">premium</option>
+          <option value="premium_plus">premium_plus</option>
+          <option value="special">special</option>
+          <option value="admin">admin</option>
         </select>
       </label><br>
 
