--- a/public/index.html
+++ b/public/index.html
@@ -882,10 +882,13 @@ function gradeToLabel(grade) {
   const g = (grade || 'basic').toLowerCase();
   let roleLabel;
   switch (g) {
-    case 'admin':   roleLabel = '[관리자] ';   break;
-    case 'premium': roleLabel = '[정기회원] '; break;
-    case 'special': roleLabel = '[특별회원] '; break;
-    default:        roleLabel = '[일반회원] '; break; // basic 또는 기타
+    case "admin":   roleLabel = "[관리자] ";   break;
+      case "premium3": roleLabel = "[정기회원3] "; break;
+         case "premium6": roleLabel = "[정기회원6] "; break;
+            case "premium": roleLabel = "[정기회원] "; break;
+               case "premium_plus": roleLabel = "[정기회원+] "; break;
+      case "special": roleLabel = "[특별회원] "; break;
+      default:        roleLabel = "[일반회원] "; break;
   }
   return roleLabel;
 }
