--- a/public/member-admin2.html
+++ b/public/member-admin2.html
@@ -68,8 +68,11 @@
 
       <label>등급 (grade):
         <select id="edit-grade">
-          <option value="basic">일반</option>
+          <option value="basic">일반회원</option>
+          <option value="premium3">정기회원3</option>
+          <option value="premium6">정기회원6</option>
           <option value="premium">정기회원</option>
+          <option value="premium_plus">정기회원+</option>
           <option value="special">특별회원</option>
           <option value="admin">관리자</option>
         </select>
@@ -77,8 +80,11 @@
 
       <label>권한 (role):
         <select id="edit-role">
-          <option value="normal">일반</option>
+          <option value="normal">일반회원</option>
+          <option value="premium3">정기회원3</option>
+          <option value="premium6">정기회원6</option>
           <option value="premium">정기회원</option>
+          <option value="premium_plus">정기회원+</option>
           <option value="special">특별회원</option>
           <option value="admin">관리자</option>
         </select>
