정기결제연동

--- a/public/business-info.html
+++ b/public/business-info.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>사업자정보확인 | 트리만세력(강남효약국)</title>
+  <title>사업자정보확인 | 트리사주[트리만세력]</title>
   <style>
     body {
       font-family: "Noto Sans KR", sans-serif;
@@ -30,12 +30,12 @@
 <body>
   <h1>사업자정보확인</h1>
   <div class="info-box">
-    <p><strong>상호</strong> 강남효약국</p>
+    <p><strong>상호</strong> 트리사주</p>
     <p><strong>대표자명</strong> [유섬근]</p>
-    <p><strong>사업자등록번호</strong> [122-13-39843]</p>
+    <p><strong>사업자등록번호</strong> [795-40-01592]</p>
     <p><strong>통신판매업신고번호</strong> []</p>
-    <p><strong>주소</strong> [경기도 기흥구 신갈동 신구로12번길 11-1]</p>
-    <p><strong>대표전화</strong> [031-286-3379]</p>
+    <p><strong>주소</strong> [서울시 송파구 법원로4길 10 힐스테이트에코문정 1125]</p>
+    <p><strong>대표전화</strong> [010-4749-2139]</p>
     <p><strong>이메일</strong> <a href="mailto:[yyulss@naver.com]">[yyulss@naver.com]</a></p>
     <p><strong>사업자정보공개</strong> 
       <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=[1221339843]" target="_blank">공정거래위원회 사업자정보 확인하기</a>
