--- a/public/terms.html
+++ b/public/terms.html
@@ -30,7 +30,7 @@
   <h1>이용약관</h1>
 
   <h2>제1조(목적)</h2>
-  <p>본 약관은 강남효약국[트리만세력](이하 “회사”)이 운영하는 웹사이트에서 제공하는 인터넷 사주 서비스(이하 “서비스”)를 이용함에 있어 회사와 이용자 간의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+  <p>본 약관은 트리사주[트리만세력](이하 “회사”)이 운영하는 웹사이트에서 제공하는 인터넷 사주 서비스(이하 “서비스”)를 이용함에 있어 회사와 이용자 간의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
 
   <h2>제2조(이용자의 정의)</h2>
   <p>“이용자”란 회사의 웹사이트에 접속하여 본 약관에 따라 회사가 제공하는 서비스를 이용하는 자를 말합니다.</p>
@@ -81,9 +81,10 @@
   <h2>제10조(상품 구매, 취소 및 환불)</h2>
   <ol>
     <li>회사가 제공하는 유료 서비스(디지털 사주 분석 등)는 상품의 특성상 **결제 즉시 사용이 가능한 디지털 콘텐츠**에 해당합니다.</li>
-    <li>이용자는 결제 후 **10분 이내에 한해 취소가 가능**하며, 취소가 정상적으로 접수된 경우 **결제금액 전액 환불**이 가능합니다.</li>
-    <li>10분이 경과한 이후에는 서비스가 즉시 제공되므로 **취소 및 환불이 불가**합니다.</li>
-    <li>정기구독(월 결제) 서비스의 경우, **결제일로부터 10분 이내 취소 시 전액 환불**되며, 이후에는 해당 결제기간(1개월) 동안 서비스가 유지되며 중도해지 환불은 제공되지 않습니다.</li>
+    <li>이용자는 결제 후 **당일 기준 한번도 사용하지 않은 경우에 한해서만 취소가 가능**하며, 미사용에 따라 당일내 정상적으로 접수된 경우 **결제금액 전액 환불**이 가능합니다.</li>
+    <li>1회라도 사용한 이후에는 **취소 및 환불이 불가**합니다.</li>
+    <li>예를들어 결제한 날에 **오늘 남은 횟수 (20/20) / 누적 총 35회** 이렇게 되어 있으면 당일 미 사용이며 **오늘 남은 횟수 (19/20) / 누적 총 36회** 이렇게 되면 1회 사용에 해당합니다. 이는 무료로 제공되는 횟수와 구분이 안되므로 결제일에 무료 사용은 유료사용에 포함됩니다</li>
+    <li>정기구독(월 결제) 서비스의 경우, **위와 같은 조건**을 따르며, 사용 이후에는 해당 결제기간(1개월) 동안 서비스가 유지되며 중도해지 환불은 제공되지 않습니다.</li>
     <li>단, 서비스 장애나 회사의 귀책사유로 인해 정상적인 이용이 불가능한 경우에는 전자상거래법에 따라 환불 조치합니다.</li>
   </ol>
 
