정기결제연동

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -32,7 +32,7 @@
 <body>
   <h1>개인정보취급방침</h1>
 
-  <p>강남효약국(트리만세력)(이하 “회사”)은 「개인정보보호법」 등 관련 법령에 따라 이용자의 개인정보를 보호하고, 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 다음과 같은 개인정보취급방침을 수립·공개합니다.</p>
+  <p>트리사주(트리만세력)(이하 “회사”)은 「개인정보보호법」 등 관련 법령에 따라 이용자의 개인정보를 보호하고, 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 다음과 같은 개인정보취급방침을 수립·공개합니다.</p>
 
   <h2>1. 수집하는 개인정보 항목</h2>
   <p>회사는 서비스 이용을 위해 다음과 같은 최소한의 개인정보를 수집합니다.</p>
@@ -74,7 +74,7 @@
   <p>회사는 이용자의 개인정보 보호를 위해 다음과 같이 개인정보 보호책임자를 지정하고 있습니다.</p>
   <ul>
     <li>책임자: [유섬근]</li>
-    <li>연락처: [031-286-3379]</li>
+    <li>연락처: [010-4749-2139]</li>
     <li>이메일: [yyulss@naver.com]</li>
   </ul>
 
