--- a/public/business-info1.html
+++ b/public/business-info1.html
@@ -46,9 +46,9 @@
   <a href="https://treesaju.vercel.app/" style="text-decoration:none; color:#333;">🏠 홈으로 가기</a>
   <br>
   <span style="display:inline-block; margin-top:6px;">
-    <a href="/terms.html" style="color:#333; text-decoration:none; margin:0 4px;">이용약관</a> |
-    <a href="/privacy.html" style="color:#333; text-decoration:none; margin:0 4px;">개인정보취급방침</a> |
-    <a href="/business-info.html" style="color:#333; text-decoration:none; margin:0 4px;">사업자정보확인</a>
+    <a href="/terms1.html" style="color:#333; text-decoration:none; margin:0 4px;">이용약관</a> |
+    <a href="/privacy1.html" style="color:#333; text-decoration:none; margin:0 4px;">개인정보취급방침</a> |
+    <a href="/business-info1.html" style="color:#333; text-decoration:none; margin:0 4px;">사업자정보확인</a>
   </span>
 </div>
 
