--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -811,9 +811,9 @@
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다.
   <br>
   <span class="note-links">
-    <a href="/terms.html">이용약관</a> |
-    <a href="/privacy.html">개인정보취급방침</a> |
-    <a href="/business-info.html">사업자정보확인</a>
+    <a href="/terms1.html">이용약관</a> |
+    <a href="/privacy1.html">개인정보취급방침</a> |
+    <a href="/business-info1.html">사업자정보확인</a>
   </span>
 </div>
 
