배포에러수정

--- a/public/member-admin.html
+++ b/public/member-admin.html
@@ -24,9 +24,9 @@
 </head>
 <body>
   <h2>회원관리</h2>
-
+ 
   <input type="text" id="searchInput" placeholder="닉네임/이메일 검색" />
-  <button onclick="loadMembers(1)">검색</button>
+  <button onclick="loadMembers(1)">검색</button>   <a href="https://supabase.com/dashboard/project/dxrgobsgeeshkybkbnxo/editor/45485">전체테이블</a> |
 
   <table>
     <thead>
