배포에러수정

--- a/public/member-admin.html
+++ b/public/member-admin.html
@@ -26,7 +26,7 @@
   <h2>회원관리</h2>
  
   <input type="text" id="searchInput" placeholder="닉네임/이메일 검색" />
-  <button onclick="loadMembers(1)">검색</button>   <a href="https://supabase.com/dashboard/project/dxrgobsgeeshkybkbnxo/editor/45485">전체테이블</a> |
+  <button onclick="loadMembers(1)">검색</button>   <a href="https://supabase.com/dashboard/project/dxrgobsgeeshkybkbnxo/editor/45485" target="_blank">전체테이블 보기</a> 
 
   <table>
     <thead>
